fixed stuff and some forbidden tests